--- a/src/components/Table/style.scss
+++ b/src/components/Table/style.scss
@@ -1,23 +1,23 @@
-.all-table-wrap {
+.t-wrap-all {
   width: 100%;
   position: relative;
   cursor: default;
 }
-.all-table-wrap * {
+.t-wrap-all * {
   box-sizing: border-box;
 }
 
-.all-table-wrap thead th {
+.t-wrap-all thead th {
   background-color: #f5f7f9;
   height: 40px;
   padding: 8px;
 }
-.table-style {
+.t-style {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-.table-style th {
+.t-style th {
   color: #657180;
   font-size: 13px;
   border: 1px solid #e3e8ee;
@@ -27,11 +27,11 @@
   background-color: #ebf7ff !important;
 }
 
-.table-style tbody tr:nth-child(even) {
+.t-style tbody tr:nth-child(even) {
   background: #f5f7f9;
 }
 
-.table-style td {
+.t-style td {
   padding: 8px;
   color: #657180;
   font-size: 12px;
@@ -41,22 +41,22 @@
   white-space: normal;
 }
 
-.table-style td > * {
+.t-style td > * {
   word-break: break-word;
 }
 
-.table-style tbody > tr:first-child > td {
+.t-style tbody > tr:first-child > td {
   border-top-color: transparent;
 }
 
-.table-wrap {
+.t-wrap {
   width: 100%;
   white-space: nowrap;
   overflow: auto;
   position: relative;
 }
 
-.fixRow-table {
+.t-top-fixrow {
   background-color: #fff;
   position: relative;
   overflow: hidden;
@@ -74,40 +74,40 @@
   border-bottom: none;
 }
 
-.table-wrap::-webkit-scrollbar {
+.t-wrap::-webkit-scrollbar {
   width: 10px;
   height: 10px;
   background-color: #f5f5f5;
 }
-.table-wrap::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 1 6px rgba(0, 0, 0, 0.3);
+.t-wrap::-webkit-scrollbar-track {
   border-radius: 5px;
+  box-shadow: inset 0 1 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 
-.table-wrap::-webkit-scrollbar-thumb {
+.t-wrap::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  -webkit-box-shadow: inset 0 1 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 1 6px rgba(0, 0, 0, 0.3);
   background-color: #d2d2d2;
 }
 
-.table-wrap::-webkit-scrollbar-corner {
+.t-wrap::-webkit-scrollbar-corner {
   background-color: #f5f5f5;
 }
 
-.table-fix-tbody-wrap {
+.t-main-wrap {
   top: -41px;
   position: relative;
 }
 
-.fixLeftCol-table-wrap-title {
+.t-left-fixcol-header {
   position: absolute;
   top: 0;
   background-color: #fff;
   z-index: 99;
 }
 
-.fixLeftCol-table-wrap {
+.t-left-fixcol {
   overflow: hidden;
   position: absolute;
   background-color: #fff;
@@ -116,11 +116,11 @@
   box-shadow: 2px 0 6px -2px rgba(0, 0, 0, 0.2);
 }
 /*
-.fixLeftCol-table-wrap tr {
+.t-left-fixcol tr {
     box-shadow: 2px 0 6px -2px rgba(0, 0, 0, .2);
 }*/
 
-.fixRightCol-table-wrap-title {
+.t-right-fixcol-header {
   position: absolute;
   top: 0;
   right: 10px;
@@ -128,7 +128,7 @@
   z-index: 99;
 }
 
-.fixRightCol-table-wrap {
+.t-right-fixcol {
   overflow: hidden;
   position: absolute;
   background-color: #fff;
